--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "basicserv",
   "version": "1.0.0",
-  "description": "basic server",
+  "description": "training project",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
@@ -16,7 +17,6 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "pug": "^2.0.3"
+    "express-handlebars": "^3.0.0"
   }
 }
