--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "sequelize": "^6.3.5"
+    "pdfkit": "^0.11.0",
+    "sequelize": "^6.3.5",
+    "uuid": "^8.3.2"
   }
 }
