--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "sequelize": "^6.3.5",
+    "stripe": "^8.129.0",
     "uuid": "^8.3.2"
   }
 }
